Add og image and og url

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Shiksha - No More Empty Classrroms" />
     <meta property="og:description" content="A platform for cognitive and intellectual skills test. The test helps students to know their abilities and weaknesses, and builds them a curriculum that matches their learning curve and pace." />
-    <!-- <meta property="og:image" content="https://example.com/image.jpg" /> -->
-    <!-- <meta property="og:url" content="https://example.com" /> -->
+    <meta property="og:image" content="./og-image.png" />
+    <meta property="og:url" content="https://shiksha-test.vercel.app" />
     <meta property="og:type" content="Education" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
